--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
   </head>
   <body>
     {{>header}}
+    <p>This site was created by Marius De Allie. It uses data from mapbox.com and weatherstack.com!</p>
     <img src="/img/robot.png" alt="Robot"/>
     {{>footer}}
   </body>
